# agentic-dev-workflows

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md
.github/workflows/: validate.yml
core/: README.md
core/agents/: accessibility-reviewer.agent.md  architect.agent.md  asset-director.agent.md  ci-debugger.agent.md  cli-designer.agent.md  data-contract-reviewer.agent.md  docs-maintainer.agent.md  implementer.agent.md  readme-specialist.agent.md  release-manager.agent.md  reviewer.agent.md  security-reviewer.agent.md  test-runner.agent.md  ui-architect.agent.md  visual-qa-reviewer.agent.md
core/commands/: agentize-repo.command.md  bug-repro.command.md  fix-bug.command.md  image-brief.command.md  implement-plan.command.md  make-agent-friendly-cli.command.md  map-codebase.command.md  new-feature-plan.command.md  readme-refresh.command.md  release-check.command.md  review-council.command.md  safe-refactor.command.md  test-gap-analysis.command.md  ui-polish-pass.command.md
docs/: architecture.md  installation.md  provider-adapters.md  workflow-authoring-guide.md
examples/: README.md  dogfooding-report.md  generator.json
mcp/workflow-server/: README.md  pyproject.toml
mcp/workflow-server/src/workflow_library_mcp/: __init__.py  server.py  service.py
providers/: README.md
scripts/: __init__.py  build_release.py  generate_examples.py  generate_provider_assets.py  render_templates.py  validate_workflows.py
tests/: test_build_release.py  test_generate_examples.py  test_generate_provider_assets.py  test_validate_workflows.py  test_workflow_server.py
(+132 files in other folders)
